# DeformationTransfer

./: .gitignore  CMakeLists.txt  README.md
data/: README.txt  camel_horse_vert.corr  horse_camel_vert.corr
src/correspondence/: Correspondence.cpp
src/corrtool/: Camera.cpp  Camera.h  CorrespondenceManager.cpp  CorrespondenceManager.h  MeshView.cpp  MeshView.h  corrtool.cpp  gl.h
src/shared/: Correspondence.cpp  Correspondence.h  DenseCorrespondence.cpp  DenseCorrespondence.h  Grid.cpp  Grid.h  Matrix.h  Mesh.cpp  Mesh.h  Search.cpp  Search.h  SingleDenseCorrespondence.cpp  SingleDenseCorrespondence.h  SolverBase.cpp  SolverBase.h  SparseCorrespondence.cpp  SparseCorrespondence.h  Timing.h  Util.cpp  Util.h
src/shared/correspondence/: CorrespondenceSolver.cpp  CorrespondenceSolver.h  CorrespondenceUtil.cpp  CorrespondenceUtil.h
src/shared/transfer/: TransferSolver.cpp  TransferSolver.h
src/test/: Test.cpp
src/transfer/: Transfer.cpp
